# seedbase-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/seedbase/: __init__.py  _ssl.py  cli.py  core.py  exporters.py  pytest_plugin.py  sdk.py
src/seedbase/parsers/: __init__.py  csv_parser.py  db_connect_parser.py  json_parser.py  mysql_parser.py  postgresql_parser.py
src/seedbase/tests/: test_cli.py  test_pytest_plugin.py  test_sdk.py  test_ssl.py
